add apiserver and the modify result get mode
